# sage-eval

./: .coverage  .gitignore  COPILOT_INSTRUCTIONS.md  README.md  pyproject.toml  quickstart.sh
.github/: copilot-instructions.md
docs/adr/: 0001-boundary-no-fallback-registration.md  0002-metric-judge-contract-tests.md
src/sage_libs/sage_eval/: __init__.py  _register.py  _version.py
src/sage_libs/sage_eval/judges/: faithfulness.py  relevance.py
src/sage_libs/sage_eval/metrics/: accuracy.py  bleu.py  f1.py
src/sage_libs/sage_eval/profilers/: latency.py  throughput.py
tests/: __init__.py  test_issue3_boundary_no_fallback.py  test_issue5_metric_judge_contracts.py  test_judges.py  test_metrics.py  test_package.py  test_profilers.py
