[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isage-eval"
version = "0.1.0.2"
description = "SAGE Evaluation Framework - Metrics, profilers, and judges for AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }]
keywords = ["evaluation", "metrics", "profiler", "judge", "LLM", "AI"]

dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "isage-libs>=0.2.4.22",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.4.0"]

[project.urls]
"Homepage" = "https://github.com/intellistream/sage-eval"
"Repository" = "https://github.com/intellistream/sage-eval"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sage_libs*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
